<resources>
    <string name="app_name">Burpger</string>
    <string name="forget_password">Forget Password?</string>
    <string name="selected_language">English</string>
    <string name="language">Hi, GFG</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_experience_a_new_world">Sign Up to experience a new World.</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="already_have_an_account_login">Already have an Account? LOGIN</string>
    <string name="welcome_what_would_you_like_to_order">Welcome ! what would you like to order ?</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="non_veg">Non Veg</string>
    <string name="hot_dog">Hot Dog</string>
    <string name="drinks">Drinks</string>
    <string name="sushi">Sushi</string>
    <string name="meat">Meat</string>
    <string name="more">More</string>
    <string name="ready_to_place_order">Ready to Place order</string>
    <string name="order_summary">Order Summary</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="total_is_0">Total is</string>
    <string name="place_order">Place Order</string>
    <string name="go_to_home">Go to Home</string>
    <string name="to_forget_password_enter_your_username_associated_with_your_account">To Forget Password Enter your Username associated with your account</string>
    <string name="new_password">New Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="thank_you_for_your_order">THANK YOU FOR YOUR ORDER</string>
    <string name="hello_welcome">Hello, Welcome</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="regular_pizza">Regular Pizza</string>
    <string name="cheese_pizza">Cheese Pizza</string>
    <string name="tandoori_pizza">Tandoori Pizza</string>
    <string name="peri_peri_pizza">Peri Peri Pizza</string>
    <string name="paneer_cheese_pizza">Paneer Cheese Pizza</string>
    <string name="garden_fresh_pizza">Garden Fresh Pizza</string>
</resources>