<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">


    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:scaleType="center"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:transitionName="logo_img"
            app:srcCompat="@mipmap/logo_1_app_foreground" />

        <TextView
            android:id="@+id/lofoWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/lexend_medium"
            android:text="@string/hello_welcome"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend_light"
            android:text="@string/sign_in_to_continue"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forgetBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:elevation="0dp"
                android:fontFamily="@font/lexend_light"
                android:layout_margin="7dp"
                android:textSize="12sp"
                />
            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:background="#7647C8"
                android:fontFamily="@font/lexend_light"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:transitionName="sign_up_in"
                />
            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_user_sign_up"
                android:background="#00000000"
                android:textColor="@color/black"
                android:fontFamily="@font/lexend_light"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:transitionName="back_sign_up_in"
                />



        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>